Adding New Customer and Movies

--- a/Vidly/Views/Movie/Index.cshtml
+++ b/Vidly/Views/Movie/Index.cshtml
@@ -6,6 +6,12 @@
 
 <h2>Movies</h2>
 
+<div class="form-group">
+    @Html.ActionLink("New Movie", "New", "Movie", new { @class = "btn btn-primary" })
+</div>
+    
+
+
 <table class="table table-bordered table-hover">
     <thead>
         <tr>
