Adding Server side and client side validation

--- a/Vidly/Content/Site.css
+++ b/Vidly/Content/Site.css
@@ -22,3 +22,12 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/*Set color of validation message to red*/
+.field-validation-error {
+    color: red;
+}
+
+.input-validation-error {
+    border: 2px solid red;
+}
