--- a/Vidly/Views/Movie/Details.cshtml
+++ b/Vidly/Views/Movie/Details.cshtml
@@ -7,7 +7,7 @@
 
 <ul class="list-group">
     <li>
-        Genre : @Model.Genre
+        Genre : @Model.Genre.Name
     </li>
     <li>
         Release Date : @Model.ReleaseDate.ToShortDateString()
