--- a/Vidly/Views/Movie/Index.cshtml
+++ b/Vidly/Views/Movie/Index.cshtml
@@ -24,7 +24,7 @@
         {
         <tr>
             <td>
-                @Html.ActionLink(movie.Name,"Details",new { id = movie.Id },null)
+                @Html.ActionLink(movie.Name,"Edit",new { id = movie.Id },null)
             </td>
 
             <td>
